--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,7 @@
-# Etapa de construcción
-FROM node:23-alpine AS build
+FROM node:23-alpine
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
-
-# Etapa de producción (usando nginx)
-FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
-EXPOSE 80
+EXPOSE 5173
+CMD ["npm", "run", "dev"]
