--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:15
@@ -40,13 +38,14 @@ services:
     container_name: worko_frontend
     restart: always
     environment:
-      - VITE_API_URL=http://backend:5000
+      - VITE_API_URL=http://localhost:5000
     ports:
       - "5173:5173"
     depends_on:
       - backend
     networks:
       - worko_net
+    command: npm run dev -- --host
 
 networks:
   worko_net:
